added guessing game code

--- a/c_console/c_console.vcxproj.filters
+++ b/c_console/c_console.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Variables.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GuessingGame.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
