--- a/c_console/c_console.vcxproj
+++ b/c_console/c_console.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GuessingGame.c" />
     <ClCompile Include="Variables.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
